fix: 1.fold组件overflow undefined导致失效 2.menu适老模式item布局适配

--- a/src/calendar/index.module.less
+++ b/src/calendar/index.module.less
@@ -133,7 +133,7 @@
     top: 126px;
   }
   .item {
-    width: 107px;
+    width: 103px;
     height: 126px;
     border: 2px solid #ffffff;
     border-radius: 0;
